Change canonical links to https.

--- a/templates/colors.html
+++ b/templates/colors.html
@@ -2,7 +2,7 @@
 {% block title %}Silica Gel, Oxygen Absorber, and Desiccant Packets by Color | Silica-Gel.org{% endblock title %}
 {% block description %}Visual encyclopedia of silica gel and desiccant packets arranged by color.{% endblock description %}
 {% block extrahead %}
-<link rel="canonical" href="http://silica-gel.org/colors/" />
+<link rel="canonical" href="https://silica-gel.org/colors/" />
 {% endblock extrahead %}
 {% block content %}
 <h2>Print Colors</h2>
