--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.htm" %}{% spaceless %}<!DOCTYPE html>
 {% block extrahead %}
-<link rel="canonical" href="http://silica-gel.org/" />
+<link rel="canonical" href="https://silica-gel.org/" />
 {% endblock extrahead %}
 {% include 'analytics.inc' %}
 {% block content %}
