--- a/templates/languages.html
+++ b/templates/languages.html
@@ -2,7 +2,7 @@
 {% block title %}Silica Gel, Oxygen Absorber, and Desiccant Packets by Print Language | Silica-Gel.org{% endblock title %}
 {% block description %}Visual encyclopedia of silica gel and desiccant packets arranged by language.{% endblock description %}
 {% block extrahead %}
-<link rel="canonical" href="http://silica-gel.org/languages/" />
+<link rel="canonical" href="https://silica-gel.org/languages/" />
 {% endblock extrahead %}
 {% block content %}
 <h2>Languages</h2>
