--- a/templates/manufacturer.html
+++ b/templates/manufacturer.html
@@ -2,7 +2,7 @@
 {% block title %}Silica Gel, Oxygen Absorber, and Desiccant Packets from {{ manufacturer.name }} | Silica-Gel.org{% endblock title %}
 {% block description %}Silica gel and desiccant packets produced by {{ manufacturer.name }}.{% endblock description %}
 {% block extrahead %}
-<link rel="canonical" href="http://silica-gel.org/manufacturer/{{ manufacturer.slug }}/" />
+<link rel="canonical" href="https://silica-gel.org/manufacturer/{{ manufacturer.slug }}/" />
 {% endblock extrahead %}
 {% block content %}
 <h2>Packets Produced by {{ manufacturer.name }}</h2>
