--- a/templates/packet.html
+++ b/templates/packet.html
@@ -1,7 +1,7 @@
 {% extends "base.htm" %}{% spaceless %}<!DOCTYPE html>
 {% block title %}{{ packet.description }} | Silica-Gel.org{% endblock title %}
 {% block extrahead %}
-<link rel="canonical" href="http://silica-gel.org/packet/{{ packet.id }}/" />
+<link rel="canonical" href="https://silica-gel.org/packet/{{ packet.id }}/" />
 {% endblock extrahead %}
 {% block content %}
 <div class="banner">{% include 'adsense_responsive.inc' %}</div>
