--- a/templates/color.html
+++ b/templates/color.html
@@ -2,7 +2,7 @@
 {% block title %}{{ color|capfirst }} Silica Gel, Oxygen Absorber, and Desiccant Packets | Silica-Gel.org{% endblock title %}
 {% block description %}Visual encyclopedia of silica gel and desiccant packets arranged by color.{% endblock description %}
 {% block extrahead %}
-<link rel="canonical" href="http://silica-gel.org/color/{{ color.slug }}/" />
+<link rel="canonical" href="https://silica-gel.org/color/{{ color.slug }}/" />
 {% endblock extrahead %}
 {% block content %}
 <h2>Packets Printed in {{ color|capfirst }}</h2>
