--- a/templates/language.html
+++ b/templates/language.html
@@ -2,7 +2,7 @@
 {% block title %}{{ language|capfirst }} Silica Gel, Oxygen Absorber, and Desiccant Packets | Silica-Gel.org{% endblock title %}
 {% block description %}Visual encyclopedia of silica gel and desiccant packets printed in {{ language|capfirst }}.{% endblock %}
 {% block extrahead %}
-<link rel="canonical" href="http://silica-gel.org/language/{{ language.slug }}/" />
+<link rel="canonical" href="https://silica-gel.org/language/{{ language.slug }}/" />
 {% endblock extrahead %}
 {% block content %}
 <h2>Packets Labeled in {{ language|capfirst }}</h2>
