Keep privacy policy on same site instead of linking to ZC.

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,5 +20,5 @@
 {% endblock content %}
 {% include 'copyright.inc' %}
 {% block extrafooter %}
-<p class="copyright"><a href="http://zetacentauri.com/privacy/">Privacy Policy</a></p>
+<p class="copyright"><a href="/privacy-policy/">Privacy Policy</a></p>
 {% endblock extrafooter %}{% endspaceless %}
